Edit hobbies icon not visible in responsive bug

--- a/src/components/_formElements/CommunityTopDropdown/style.module.css
+++ b/src/components/_formElements/CommunityTopDropdown/style.module.css
@@ -76,7 +76,7 @@ background: var(--Purple-3, #F7F5F9) !important;
 }
 
 .options-container.active {
-    max-height: 600px;
+    max-height: 70vh;
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
@@ -84,6 +84,7 @@ background: var(--Purple-3, #F7F5F9) !important;
     left: -19px;
     width: 202px;
     background: #fff;
+    overflow-y: auto;
 
     /* Drop */
     box-shadow: 0px 8px 12px 0px rgba(147, 156, 163, 0.12), 0px 0px 2px 0px rgba(147, 156, 163, 0.36);
